Fix case study margins on mobile

--- a/_sass/_panel.scss
+++ b/_sass/_panel.scss
@@ -2,7 +2,7 @@
 .panel {
   position: relative;
   padding: 1rem;
-  height: 20rem;
+  height: 25rem;
   @include flex-center;
   background: grey;
   -webkit-transition: background 0.25s ease-out;
